--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.13.0",
         "react-bootstrap": "^1.0.0",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
